--- a/structure/src/wxwidget/06-dnd/CMakeLists.txt
+++ b/structure/src/wxwidget/06-dnd/CMakeLists.txt
@@ -27,14 +27,16 @@ enable_testing()
 
 aux_source_directory(. SRC_LIST)
 set(wxWidgets_CONFIGURATION mswu)
-find_package(wxWidgets REQUIRED COMPONENTS core base)
-include(${wxWidgets_USE_FILE})
 
+# find_package(wxWidgets REQUIRED COMPONENTS core base)
+# include(${wxWidgets_USE_FILE})
 add_executable(dnd ${SRC_LIST})
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
 
-target_link_libraries(${PROJECT_NAME} ${wxWidgets_LIBRARIES})
-target_include_directories(${PROJECT_NAME} PUBLIC include)
+# arget_link_libraries(${PROJECT_NAME} ${wxWidgets_LIBRARIES})
+# target_include_directories(${PROJECT_NAME} PUBLIC include)
+add_subdirectory(wxWidgets-3.2.0)
+target_link_libraries(dnd wx::net wx::core wx::base)
