--- a/BFE/vcode/package.json
+++ b/BFE/vcode/package.json
@@ -10,6 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.3.1"
+    "@astrojs/react": "^2.1.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "antd": "^5.4.5",
+    "astro": "^2.3.1",
+    "consola": "^3.1.0",
+    "dayjs": "^1.11.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite": "^4.3.2",
+    "vite-plugin-style-import": "^2.0.0"
   }
 }
