--- a/BFE/vcode/package.json
+++ b/BFE/vcode/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^2.1.1",
+    "@astrojs/vue": "^2.1.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "@xstate/react": "^3.2.1",
@@ -22,6 +23,7 @@
     "react-dom": "^18.2.0",
     "vite": "^4.3.2",
     "vite-plugin-style-import": "^2.0.0",
+    "vue": "^3.2.30",
     "xstate": "^4.37.1"
   }
 }
