--- a/BFE/vcode/package.json
+++ b/BFE/vcode/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@astrojs/react": "^2.1.1",
+    "@astrojs/solid-js": "^2.1.0",
+    "@astrojs/svelte": "^2.1.0",
     "@astrojs/vue": "^2.1.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
@@ -21,6 +23,8 @@
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "solid-js": "^1.4.3",
+    "svelte": "^3.54.0",
     "vite": "^4.3.2",
     "vite-plugin-style-import": "^2.0.0",
     "vue": "^3.2.30",
