--- a/BFE/vcode/package.json
+++ b/BFE/vcode/package.json
@@ -14,6 +14,7 @@
     "@astrojs/solid-js": "^2.1.0",
     "@astrojs/svelte": "^2.1.0",
     "@astrojs/vue": "^2.1.1",
+    "@babel/core": "^7.21.4",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "@xstate/react": "^3.2.1",
@@ -21,10 +22,12 @@
     "astro": "^2.3.1",
     "consola": "^3.1.0",
     "dayjs": "^1.11.7",
+    "element-plus": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "solid-js": "^1.4.3",
     "svelte": "^3.54.0",
+    "typescript": "^4.9.5",
     "vite": "^4.3.2",
     "vite-plugin-style-import": "^2.0.0",
     "vue": "^3.2.30",
