--- a/BFE/vcode/package.json
+++ b/BFE/vcode/package.json
@@ -7,7 +7,10 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "prepare": "npm run smui-theme-light && npm run smui-theme-dark",
+    "smui-theme-light": "smui-theme compile public/smui.css -i src/theme -i ./node_modules",
+    "smui-theme-dark": "smui-theme compile public/smui-dark.css -i src/theme/dark -i ./node_modules"
   },
   "dependencies": {
     "@astrojs/react": "^2.1.1",
@@ -15,16 +18,24 @@
     "@astrojs/svelte": "^2.1.0",
     "@astrojs/vue": "^2.1.1",
     "@babel/core": "^7.21.4",
+    "@material/theme": "^14.0.0",
+    "@smui/button": "6.1.4",
+    "@smui/common": "6.1.4",
+    "@smui/form-field": "6.1.4",
+    "@smui/textfield": "6.1.4",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "@xstate/react": "^3.2.1",
     "antd": "^5.4.5",
     "astro": "^2.3.1",
+    "color-palette": "link:@material/theme/color-palette",
     "consola": "^3.1.0",
     "dayjs": "^1.11.7",
     "element-plus": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.62.1",
+    "smui-theme": "6.1.4",
     "solid-js": "^1.4.3",
     "svelte": "^3.54.0",
     "typescript": "^4.9.5",
