--- a/BFE/vcode/package.json
+++ b/BFE/vcode/package.json
@@ -23,6 +23,9 @@
     "@smui/common": "6.1.4",
     "@smui/form-field": "6.1.4",
     "@smui/textfield": "6.1.4",
+    "@suid/icons-material": "^0.6.1",
+    "@suid/material": "^0.12.1",
+    "@suid/vite-plugin": "^0.1.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "@xstate/react": "^3.2.1",
@@ -40,6 +43,7 @@
     "svelte": "^3.54.0",
     "typescript": "^4.9.5",
     "vite": "^4.3.2",
+    "vite-plugin-solid": "^2.7.0",
     "vite-plugin-style-import": "^2.0.0",
     "vue": "^3.2.30",
     "xstate": "^4.37.1"
