--- a/BFE/leptos-tutorial/Cargo.toml
+++ b/BFE/leptos-tutorial/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gloo-timers = {  version = "0.2.6", features = ["futures"] }
 leptos = "0.2.5"
