--- a/BFE/leptos-tutorial/Cargo.toml
+++ b/BFE/leptos-tutorial/Cargo.toml
@@ -8,3 +8,19 @@ edition = "2021"
 [dependencies]
 gloo-timers = {  version = "0.2.6", features = ["futures"] }
 leptos = "0.2.5"
+
+[profile.wasm-release]
+inherits = "release"
+opt-level = 'z'
+lto = true
+codegen-units = 1
+
+# ....
+
+[package.metadata.leptos]
+# ....
+lib-profile-release = "wasm-release"
+
+[unstable]
+build-std = ["std", "panic_abort", "core", "alloc"]
+build-std-features = ["panic_immediate_abort"]
