--- a/bluetooth/package.json
+++ b/bluetooth/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/web-bluetooth": "^0.0.17",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-mkcert": "^1.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
