--- a/cloudflare/qwert/qwert/package.json
+++ b/cloudflare/qwert/qwert/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230419.0",
+    "@graphql-tools/executor-http": "^1.0.0",
     "itty-router": "^3.0.12",
     "typescript": "^5.0.4",
     "vitest": "^0.31.1",
