--- a/babylon-demo/package.json
+++ b/babylon-demo/package.json
@@ -10,7 +10,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "@babylonjs/core": "^6.7.0",
     "@babylonjs/gui": "^6.7.0",
