--- a/babylon-demo/package.json
+++ b/babylon-demo/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "react": "^18.2.0",
+    "react-babylonjs": "^3.1.17",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
