--- a/babylon-demo/package.json
+++ b/babylon-demo/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@preact/signals-react": "^1.3.2",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "react": "^18.2.0",
