--- a/myorg/packages/blog/package.json
+++ b/myorg/packages/blog/package.json
@@ -5,5 +5,8 @@
   "scripts": {
     "build": "eleventy --input=./src --output=../../dist/packages/blog",
     "serve": "eleventy --serve --input=./src --output=../../dist/packages/blog"
+  },
+  "dependencies": {
+    "ascii": "*"
   }
 }
