--- a/react-babylon-examples/package.json
+++ b/react-babylon-examples/package.json
@@ -19,6 +19,10 @@
     "nx": "16.4.0",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
-    "typescript": "~5.1.3"
-  }
+    "typescript": "~5.1.3",
+    "vite": "^4.3.9"
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
