--- a/react-babylon-examples/tsconfig.base.json
+++ b/react-babylon-examples/tsconfig.base.json
@@ -14,7 +14,8 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {},
+    "jsx": "react-jsx"
   },
   "exclude": ["node_modules", "tmp"]
 }
