--- a/react-babylon-examples/package.json
+++ b/react-babylon-examples/package.json
@@ -7,8 +7,10 @@
   "dependencies": {
     "@babylonjs/core": "^6.9.0",
     "@babylonjs/gui": "^6.9.0",
+    "@types/animejs": "^3.1.7",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "animejs": "^3.2.1",
     "react": "^18.2.0",
     "react-babylonjs": "^3.1.17",
     "react-dom": "^18.2.0"
