--- a/tensor/package.json
+++ b/tensor/package.json
@@ -31,5 +31,9 @@
 		"vite": "^4.3.6",
 		"vitest": "^0.32.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@tensorflow/tfjs": "^4.8.0",
+		"@tensorflow/tfjs-vis": "^1.5.1"
+	}
 }
