--- a/react-babylon-examples/package.json
+++ b/react-babylon-examples/package.json
@@ -23,10 +23,13 @@
     "@babylonjs/serializers": "^6.10.0",
     "@nx/js": "16.4.0",
     "@nx/workspace": "16.4.0",
+    "autoprefixer": "^10.4.14",
     "babylonjs-gltf2interface": "^6.0.0",
     "nx": "16.4.0",
     "nx-cloud": "latest",
+    "postcss": "^8.4.25",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.1.3",
     "vite": "^4.3.9"
   },
