--- a/react-babylon-examples/package.json
+++ b/react-babylon-examples/package.json
@@ -29,6 +29,7 @@
     "nx-cloud": "latest",
     "postcss": "^8.4.25",
     "prettier": "^2.6.2",
+    "serve": "^14.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.1.3",
     "vite": "^4.3.9"
