--- a/react-babylon-examples/package.json
+++ b/react-babylon-examples/package.json
@@ -21,18 +21,23 @@
     "@babylonjs/loaders": "^6.10.0",
     "@babylonjs/materials": "^6.11.2",
     "@babylonjs/serializers": "^6.10.0",
-    "@nx/js": "16.4.0",
+    "@nx/js": "16.5.2",
+    "@nx/vite": "^16.5.2",
     "@nx/workspace": "16.4.0",
+    "@vitejs/plugin-react": "~4.0.0",
+    "@vitest/ui": "~0.32.0",
     "autoprefixer": "^10.4.14",
     "babylonjs-gltf2interface": "^6.0.0",
+    "jsdom": "~22.1.0",
     "nx": "16.4.0",
     "nx-cloud": "latest",
     "postcss": "^8.4.25",
     "prettier": "^2.6.2",
-    "serve": "^14.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.1.3",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-tsconfig-paths": "~4.2.0",
+    "vitest": "~0.32.0"
   },
   "workspaces": [
     "packages/*"
