--- a/react-babylon-examples/packages/import-scene/package.json
+++ b/react-babylon-examples/packages/import-scene/package.json
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babylonjs-editor-generated-template": "*"
+    "editor-gen": "*"
   }
 }
