--- a/babylon-editor/tsconfig.json
+++ b/babylon-editor/tsconfig.json
@@ -15,7 +15,11 @@
             "es2015.promise",
             "es2015",
             "dom"
-        ]
+        ],
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "jsx": "react-jsx",
+        "skipDefaultLibCheck": true
     },
     "exclude": [
         "./node_modules",
