--- a/react-babylon-examples/package.json
+++ b/react-babylon-examples/package.json
@@ -28,6 +28,8 @@
     "@vitest/ui": "~0.32.0",
     "autoprefixer": "^10.4.14",
     "babylonjs-gltf2interface": "^6.0.0",
+    "cannon": "^0.6.2",
+    "cannon-es": "^0.20.0",
     "jsdom": "~22.1.0",
     "nx": "16.4.0",
     "nx-cloud": "latest",
