--- a/remix-blog/package.json
+++ b/remix-blog/package.json
@@ -21,12 +21,17 @@
   "devDependencies": {
     "@remix-run/dev": "^1.19.1",
     "@remix-run/eslint-config": "^1.19.1",
+    "@types/node": "^20.4.4",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.38.0",
-    "typescript": "^5.0.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=14.0.0"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
