--- a/remix-blog/package.json
+++ b/remix-blog/package.json
@@ -13,10 +13,13 @@
     "@remix-run/node": "^1.19.1",
     "@remix-run/react": "^1.19.1",
     "@remix-run/serve": "^1.19.1",
+    "@types/marked": "^5.0.1",
     "isbot": "^3.6.8",
+    "marked": "^5.1.1",
     "prisma": "^5.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.19.1",
