--- a/svg-mesh/package.json
+++ b/svg-mesh/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@babylonjs/core": "^6.14.0",
     "@babylonjs/gui": "^6.14.0",
+    "buffer": "^6.0.3",
+    "buffer2": "^0.0.0",
     "react": "^18.2.0",
     "react-babylonjs": "^3.1.17",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "svg-mesh-3d": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "typescript": "^5.1.6",
-    "vite": "^4.4.7"
+    "vite": "^4.4.7",
+    "vite-plugin-node-polyfills": "^0.9.0"
   }
 }
