--- a/svg-mesh/package.json
+++ b/svg-mesh/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@babylonjs/core": "^6.14.0",
     "@babylonjs/gui": "^6.14.0",
+    "@types/gl-vec3": "^1.1.1",
     "buffer": "^6.0.3",
     "buffer2": "^0.0.0",
+    "gl-vec3": "^1.1.3",
     "glslify": "^7.1.1",
     "react": "^18.2.0",
     "react-babylonjs": "^3.1.17",
     "react-dom": "^18.2.0",
-    "svg-mesh-3d": "^1.1.0"
+    "svg-mesh-3d": "^1.1.0",
+    "triangle-centroid": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.17",
