--- a/svg-mesh/package.json
+++ b/svg-mesh/package.json
@@ -17,11 +17,13 @@
     "buffer2": "^0.0.0",
     "gl-vec3": "^1.1.3",
     "glslify": "^7.1.1",
+    "mesh-reindex": "^1.0.0",
     "react": "^18.2.0",
     "react-babylonjs": "^3.1.17",
     "react-dom": "^18.2.0",
     "svg-mesh-3d": "^1.1.0",
-    "triangle-centroid": "^1.0.0"
+    "triangle-centroid": "^1.0.0",
+    "unindex-mesh": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.17",
