--- a/three-fiber-examples/package.json
+++ b/three-fiber-examples/package.json
@@ -11,12 +11,20 @@
   "devDependencies": {
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
+    "@types/three": "^0.155.0",
     "nx": "^16.6.0",
     "typescript": "^5.1.6",
     "vite": "^4.4.9"
   },
   "dependencies": {
+    "@react-three/drei": "^9.80.1",
+    "@react-three/fiber": "^8.13.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+    "react-dom": "^18.2.0",
+    "three": "^0.155.0"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "private": true
 }
