--- a/three-fiber-examples/packages/starter/package.json
+++ b/three-fiber-examples/packages/starter/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "vite"
+    "serve": "vite",
+    "build": "vite build"
   },
   "author": "",
   "license": "ISC"
