--- a/astro-view-transition/package.json
+++ b/astro-view-transition/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.10.7"
+    "@astrojs/lit": "^2.1.1",
+    "@webcomponents/template-shadowroot": "^0.2.1",
+    "astro": "^2.10.7",
+    "lit": "^2.7.0"
   }
 }
