--- a/astro-view-transition/package.json
+++ b/astro-view-transition/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@astrojs/lit": "^2.1.1",
+    "@astrojs/react": "^2.2.1",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "astro": "^2.10.7",
-    "lit": "^2.7.0"
+    "lit": "^2.7.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
