--- a/astro-view-transition/tsconfig.json
+++ b/astro-view-transition/tsconfig.json
@@ -8,6 +8,7 @@
       ]
     },
     "experimentalDecorators": true,
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "jsx": "react-jsx"
   }
 }
