--- a/wearos/flutterwatch/flutter_watch/pubspec.yaml
+++ b/wearos/flutterwatch/flutter_watch/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  wear: ^1.1.0
+  wearable_rotary: ^2.0.2
 
 dev_dependencies:
   flutter_test:
