--- a/crux/usemoon/.moon/workspace.yml
+++ b/crux/usemoon/.moon/workspace.yml
@@ -14,6 +14,7 @@ $schema: 'https://moonrepo.dev/schemas/workspace.json'
 projects:
   app: "./"
   shared: './shared'
+  next: "./packages/next-app"
 
 # Configures the version control system to utilize within the workspace. A VCS
 # is required for determining touched (added, modified, etc) files, calculating file hashes,
