--- a/crux/usemoon/packages/next-app/package.json
+++ b/crux/usemoon/packages/next-app/package.json
@@ -3,26 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "pnpm run wasm:build && next dev -H 0.0.0.0",
     "build": "pnpm run wasm:build && next build",
     "start": "pnpm run wasm:build && next start",
     "lint": "next lint",
     "wasm:build": "cd ../../shared && wasm-pack build --target web"
   },
   "dependencies": {
+    "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "shared": "link:../../shared/pkg",
+    "shared_types": "link:../../shared_types/generated/typescript"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "typescript": "^5"
   }
 }
