--- a/crux/usemoon/packages/android/build.gradle
+++ b/crux/usemoon/packages/android/build.gradle
@@ -3,5 +3,6 @@ plugins {
     alias(libs.plugins.androidApplication) apply false
     alias(libs.plugins.jetbrainsKotlinAndroid) apply false
 
+    id "com.android.library" version "8.3.0" apply false
     id "org.mozilla.rust-android-gradle.rust-android" version "0.9.3" apply false
 }
