--- a/crux/usemoon/packages/android/shared/build.gradle
+++ b/crux/usemoon/packages/android/shared/build.gradle
@@ -1,20 +1,28 @@
 plugins {
-    alias(libs.plugins.androidApplication)
-    alias(libs.plugins.jetbrainsKotlinAndroid)
+    id 'org.jetbrains.kotlin.android'
+    // /** added lines
+    id "com.android.library"
+    id 'org.mozilla.rust-android-gradle.rust-android'
+    // end of added lines**/
 }
 
 android {
     namespace 'com.example.hello_world.shared'
     compileSdk 34
 
+    // /** added lines
+    ndkVersion "26.2.11394342"
+    // end of added lines**/
+
+
     defaultConfig {
-        applicationId "com.example.hello_world.shared"
         minSdk 24
         targetSdk 34
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -30,9 +38,17 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    // /** added lines
+    sourceSets {
+        main.java.srcDirs += "${projectDir}/../../shared_types/generated/java"
+    }
+    // end of added lines**/
 }
 
 dependencies {
+    // /** added lines
+    implementation libs.jna
+    // end of added lines**/
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
@@ -41,3 +57,64 @@ dependencies {
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
 }
+
+// /** added lines
+
+apply plugin: 'org.mozilla.rust-android-gradle.rust-android'
+
+
+cargo {
+    module = "../.."
+    libname = "shared"
+    // these are the four recommended targets for Android that will ensure your library works on all mainline android devices
+    // make sure you have included the rust toolchain for each of these targets: \
+    // `rustup target add aarch64-linux-android armv7-linux-androideabi i686-linux-android x86_64-linux-android`
+    targets = ["arm", "arm64", "x86", "x86_64"]
+    extraCargoBuildArguments = ['--package', 'shared']
+}
+
+afterEvaluate {
+    // The `cargoBuild` task isn't available until after evaluation.
+    android.libraryVariants.configureEach { variant ->
+        def productFlavor = ""
+        variant.productFlavors.each {
+            productFlavor += "${it.name.capitalize()}"
+        }
+        def buildType = "${variant.buildType.name.capitalize()}"
+
+        tasks.named("compileDebugKotlin") {
+            it.dependsOn(tasks.named("typesGen"), tasks.named("bindGen"))
+        }
+
+        tasks.named("generate${productFlavor}${buildType}Assets") {
+            it.dependsOn(tasks.named("cargoBuild"))
+        }
+    }
+}
+
+tasks.register('bindGen', Exec) {
+    def outDir = "${projectDir}/../../shared_types/generated/java"
+    workingDir "../../"
+    if (System.getProperty('os.name').toLowerCase().contains('windows')) {
+        commandLine("cmd", "/c",
+                "cargo build -p shared && " + "target\\debug\\uniffi-bindgen generate shared\\src\\shared.udl " + "--language kotlin " + "--out-dir " + outDir.replace('/', '\\'))
+    } else {
+        commandLine("sh", "-c",
+                """\
+                cargo build -p shared && \
+                target/debug/uniffi-bindgen generate shared/src/shared.udl \
+                --language kotlin \
+                --out-dir $outDir
+                """)
+    }
+}
+
+tasks.register('typesGen', Exec) {
+    workingDir "../../"
+    if (System.getProperty('os.name').toLowerCase().contains('windows')) {
+        commandLine("cmd", "/c", "cargo build -p shared_types")
+    } else {
+        commandLine("sh", "-c", "cargo build -p shared_types")
+    }
+}
+// end of added lines**/
