--- a/uikit/package.json
+++ b/uikit/package.json
@@ -7,17 +7,20 @@
     "@react-three/fiber": "^8.15.13",
     "@react-three/postprocessing": "^2.16.0",
     "@react-three/rapier": "^1.3.0",
-    "@react-three/uikit": "workspace:^",
+    "@react-three/uikit": "^0.1.14",
     "@react-three/uikit-lucide": "workspace:^",
     "@react-three/xr": "^5.7.1",
     "@splinetool/r3f-spline": "^1.0.2",
     "@types/three": "^0.161.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "maath": "^0.10.7",
+    "path": "^0.12.7",
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.161.0"
+    "three": "^0.161.0",
+    "vite": "^5.1.5"
   },
   "scripts": {
     "dev": "vite --host",
