--- a/uikit/tsconfig.json
+++ b/uikit/tsconfig.json
@@ -1,8 +1,15 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "paths": {
-      "@/*": ["../../packages/kits/apfel/*"]
-    }
+    "strict": true,
+    "module": "ES2022",
+    "moduleResolution": "bundler",
+    "target": "ESNext",
+    "declaration": true,
+    "esModuleInterop": true,
+    "jsx": "react-jsx"
+  },
+  "ts-node": {
+    "transpileOnly": true,
+    "esm": true
   }
 }
