--- a/coconut-xr/starter-uikit/package.json
+++ b/coconut-xr/starter-uikit/package.json
@@ -10,8 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coconut-xr/koestlich": "^0.3.12",
+    "@coconut-xr/natuerlich": "^0.0.49",
+    "@coconut-xr/xinteraction": "^0.1.12",
+    "@preact/signals-core": "^1.5.1",
+    "@react-three/drei": "^9.101.0",
+    "@react-three/fiber": "^8.15.19",
+    "@react-three/postprocessing": "^2.16.2",
+    "@react-three/rapier": "^1.3.0",
+    "@react-three/uikit": "^0.1.16",
+    "@react-three/uikit-lucide": "^0.1.16",
+    "@splinetool/r3f-spline": "^1.0.2",
+    "@types/three": "^0.162.0",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
+    "maath": "^0.10.7",
+    "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
