--- a/coconut-xr/starter-uikit/package.json
+++ b/coconut-xr/starter-uikit/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -30,6 +30,7 @@
     "three": "^0.162.0"
   },
   "devDependencies": {
+    "@types/node": "^20.11.26",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
