--- a/mediapipe/pose/package.json
+++ b/mediapipe/pose/package.json
@@ -11,6 +11,7 @@
     "vite": "^5.2.11"
   },
   "dependencies": {
-    "@mediapipe/tasks-vision": "^0.10.14"
+    "@mediapipe/tasks-vision": "^0.10.14",
+    "@vitejs/plugin-basic-ssl": "^1.1.0"
   }
 }
