--- a/mediapipe/pose/package.json
+++ b/mediapipe/pose/package.json
@@ -7,11 +7,13 @@
     "start": "vite --host=0.0.0.0"
   },
   "devDependencies": {
+    "@types/three": "^0.164.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.11"
   },
   "dependencies": {
     "@mediapipe/tasks-vision": "^0.10.14",
-    "@vitejs/plugin-basic-ssl": "^1.1.0"
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
+    "three": "^0.164.1"
   }
 }
