--- a/hexagon/package.json
+++ b/hexagon/package.json
@@ -10,8 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.9",
     "@astrojs/check": "^0.9.3",
+    "@astrojs/react": "^3.6.2",
+    "@p5-wrapper/react": "^4.4.2",
+    "@types/react": "^18.3.9",
+    "@types/react-dom": "^18.3.0",
+    "astro": "^4.15.9",
+    "p5": "^1.11.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "@types/p5": "^1.7.6"
   }
 }
