--- a/hexagon/package.json
+++ b/hexagon/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/react": "^3.6.2",
     "@p5-wrapper/react": "^4.4.2",
+    "@sentry/astro": "^8.37.1",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.15.9",
