--- a/rive/pink-fire/package.json
+++ b/rive/pink-fire/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rive-app/react-canvas": "^4.17.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
