--- a/unity-server/package.json
+++ b/unity-server/package.json
@@ -12,6 +12,8 @@
     "vite": "^6.0.11"
   },
   "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-unity-webgl": "^9.7.0"
   }
 }
