--- a/mediapipe/mouse/package.json
+++ b/mediapipe/mouse/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "astro": "^5.7.4"
   }
 }
