--- a/langchain/package.json
+++ b/langchain/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@langchain/core": "^0.3.57",
+    "@langchain/openai": "^0.5.12",
+    "dotenv": "^16.5.0",
     "langchain": "^0.3.27"
   }
 }
