--- a/langchain/package.json
+++ b/langchain/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/community": "^0.3.45",
     "@langchain/core": "^0.3.57",
     "@langchain/openai": "^0.5.12",
     "dotenv": "^16.5.0",
-    "langchain": "^0.3.27"
+    "langchain": "^0.3.27",
+    "pdf-parse": "^1.1.1"
   }
 }
