--- a/langchain/package.json
+++ b/langchain/package.json
@@ -14,6 +14,7 @@
     "@langchain/openai": "^0.5.12",
     "dotenv": "^16.5.0",
     "langchain": "^0.3.27",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "zod": "^3.25.56"
   }
 }
