--- a/langchain/package.json
+++ b/langchain/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@langchain/community": "^0.3.45",
     "@langchain/core": "^0.3.57",
+    "@langchain/langgraph": "^0.3.1",
     "@langchain/openai": "^0.5.12",
     "dotenv": "^16.5.0",
     "langchain": "^0.3.27",
     "pdf-parse": "^1.1.1",
+    "uuid": "^11.1.0",
     "zod": "^3.25.56"
   }
 }
