--- a/bitecs-project/package.json
+++ b/bitecs-project/package.json
@@ -13,6 +13,8 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "@babylonjs/core": "^8.12.0",
+    "@babylonjs/inspector": "^8.12.0",
     "bitecs": "^0.3.40"
   }
 }
