--- a/rust-actix/Cargo.toml
+++ b/rust-actix/Cargo.toml
@@ -8,4 +8,5 @@ actix-web = "4"
 diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
 dotenvy = "0.15"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tera = "1.19" # For templating
